--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,4 +13,6 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Imports: R6
-Suggests: tinytest
+Suggests:
+  tinytest,
+  withr
