test: replace tinytest with testthat

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,5 +14,6 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Imports: R6
 Suggests:
-  tinytest,
+  testthat (>= 3.0.0),
   withr
+Config/testthat/edition: 3
