--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,5 +4,6 @@ export(Fig)
 export(fig_delete)
 export(fig_get)
 export(fig_set)
+export(fig_set_many)
 export(fig_update_env_prefix)
 export(purge)
