--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,7 @@
 export(Fig)
 export(fig_delete)
 export(fig_get)
+export(fig_purge)
 export(fig_set)
 export(fig_set_many)
 export(fig_update_env_prefix)
-export(purge)
