refactor: rename set to store

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,6 @@ export(fig_delete)
 export(fig_get)
 export(fig_load_config)
 export(fig_purge)
-export(fig_set)
-export(fig_set_many)
+export(fig_store)
+export(fig_store_many)
 export(fig_update_env_prefix)
