refactor: rename load_config to store_list

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,8 @@
 export(Fig)
 export(fig_delete)
 export(fig_get)
-export(fig_load_config)
 export(fig_purge)
 export(fig_store)
+export(fig_store_list)
 export(fig_store_many)
 export(fig_update_env_prefix)
