refactor: replace purge with delete_all

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,8 @@
 export(Fig)
 export(fig_configure)
 export(fig_delete)
+export(fig_delete_all)
 export(fig_get)
-export(fig_purge)
 export(fig_store)
 export(fig_store_list)
 export(fig_store_many)
