feat: implement get_all

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(fig_configure)
 export(fig_delete)
 export(fig_delete_all)
 export(fig_get)
+export(fig_get_all)
 export(fig_get_many)
 export(fig_store)
 export(fig_store_list)
